[project]
name = "vllm-worker"
version = "1.0.0"
description = "Lightweight vLLM inference service with persistent worker management"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "vllm==0.9.1",
    "transformers==4.51.3",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vllm_worker"]

[tool.hatch.build.targets.sdist]
include = ["vllm_worker"]
